add BTV crawler